[gd_scene load_steps=4 format=3 uid="uid://c4ad4hqklqyib"]

[ext_resource type="Script" path="res://scripts/spikes.gd" id="1_88r4j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cv8g7"]
size = Vector2(70, 70)

[sub_resource type="QuadMesh" id="QuadMesh_qt3kt"]

[node name="Spikes" type="Area2D"]
monitorable = false
script = ExtResource( "1_88r4j" )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( "RectangleShape2D_cv8g7" )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
scale = Vector2(70, 70)
z_index = -2
mesh = SubResource( "QuadMesh_qt3kt" )

[node name="TrapTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_spikes_body_entered"]
[connection signal="timeout" from="TrapTimer" to="." method="_on_trap_timer_timeout"]
